# voicechat-deuda-dialogflow

./: .gitignore  MEMORIA.md  README.md  pyproject.toml  requirements.txt
app/: .gitignore  Dockerfile  app.py  docker-compose.yaml  main.py  requirements.txt
app/config/: project_config.py
app/data/: sample_data.json
app/data/mds/: condiciones_pago_energix.md
app/helpers/: aux_functions.py  utils.py
app/routers/: billing.py
app/routers/billing/: info.py  send_invoice.py
app/routers/info/: billing.py
app/scripts/: rag_indexer.py  rag_indexer_mds.py
app/src/agent/: chain.py  prompts.py  structures.py
app/src/api/: router.py  schema.py
app/src/rag/: router.py  schema.py
app/src/services/: embeddings.py  llms.py  vector_store.py
