[project]
name = "human-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "openai-whisper>=20250625",
    "scipy>=1.17.0",
    "torch>=2.9.1",
    "transformers>=4.57.5",
    "fastapi==0.115.6",
    "uvicorn[standard]==0.30.6",
    "qdrant-client==1.16.2",
    "sentence-transformers==3.0.1",
    "pypdf==5.0.1",
    "pdf2image==1.17.0",
    "pytesseract==0.3.13",
    "Pillow==10.4.0",
    "tqdm==4.66.5",
    "numpy==2.4.1",
    "langchain-openai",
    "langchain-qdrant"
]
